chore: setup TypeScript composite projects with declaration output

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ yarn.lock
 .pnpm-debug.log
 tsconfig.tsbuildinfo
 tsconfig.*.tsbuildinfo
+.tsc-types
 tsconfig.vitest-temp.json
 docs/.vitepress/cache
 vite.config.ts.timestamp-*.mjs
@@ -18,3 +19,4 @@ vite.config.panel.ts.timestamp-*.mjs
 vite.config.shared.ts.timestamp-*.mjs
 docs/api
 .osgrep
+ralph.sh
