--- a/tsconfig.pinia-colada.json
+++ b/tsconfig.pinia-colada.json
@@ -1,8 +1,12 @@
 {
   "extends": "./tsconfig.common.json",
   "compilerOptions": {
-    // "baseUrl": ".",
     "rootDir": ".",
+    "composite": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "declarationDir": "./.tsc-types/src",
+    "noEmit": false,
     "paths": {
       "@pinia/colada": ["./src/index.ts"]
     }
