--- a/package.json
+++ b/package.json
@@ -68,12 +68,13 @@
   "devDependencies": {
     "@ast-grep/cli": "^0.40.4",
     "@pinia/colada": "workspace:*",
-    "@posva/test-utils": "workspace:*",
     "@posva/prompts": "^2.4.4",
+    "@posva/test-utils": "workspace:*",
     "@shikijs/vitepress-twoslash": "^3.20.0",
     "@size-limit/esbuild-why": "^12.0.0",
     "@size-limit/preset-small-lib": "^12.0.0",
     "@types/node": "^24.10.4",
+    "@types/semver": "^7.7.1",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
