--- a/devtools/package.json
+++ b/devtools/package.json
@@ -65,10 +65,10 @@
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.18",
     "unplugin-icons": "^23.0.1",
-    "unplugin-vue-components": "^30.0.0",
+    "unplugin-vue-components": "^31.0.0",
     "vite-plugin-dts": "^4.5.4",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4",
+    "vue-router": "https://pkg.pr.new/vue-router@2603",
     "vue-tsc": "^3.2.2"
   }
 }
