--- a/plugins/debug/package.json
+++ b/plugins/debug/package.json
@@ -41,9 +41,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsdown",
+    "build": "vite lib",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-debug -r 1",
-    "test": "vitest --ui"
+    "test": "vite test --ui"
   },
   "peerDependencies": {
     "@pinia/colada": "workspace:>="
