--- a/devtools/package.json
+++ b/devtools/package.json
@@ -56,10 +56,10 @@
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.87",
-    "@pinia/colada": "workspace:^*",
+    "@pinia/colada": "workspace:^",
     "@posva/splitpanes": "^4.0.6",
     "@tailwindcss/vite": "^4.1.18",
-    "@vueuse/core": "^14.1.0",
+    "@vueuse/core": "^14.2.0",
     "mande": "^2.0.9",
     "match-container": "^0.1.0",
     "pinia": "^3.0.4",
@@ -67,6 +67,7 @@
     "unplugin-icons": "^23.0.1",
     "unplugin-vue-components": "^31.0.0",
     "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-vue-devtools": "^8.0.5",
     "vue": "^3.5.27",
     "vue-router": "https://pkg.pr.new/vue-router@2603",
     "vue-tsc": "^3.2.4"
