--- a/devtools/package.json
+++ b/devtools/package.json
@@ -68,7 +68,7 @@
     "unplugin-vue-components": "^31.0.0",
     "vite-plugin-dts": "^4.5.4",
     "vue": "^3.5.27",
-    "vue-router": "https://pkg.pr.new/vue-router@2603",
+    "vue-router": "^5.0.0",
     "vue-tsc": "^3.2.4"
   }
 }
