--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
   "pnpm": {
     "overrides": {
       "twoslash-vue": "0.3.6",
-      "vue-router": "https://pkg.pr.new/vue-router@2603"
+      "vue-router": "^5.0.1"
     },
     "onlyBuiltDependencies": [
       "@ast-grep/cli",
