--- a/playground/package.json
+++ b/playground/package.json
@@ -26,7 +26,7 @@
     "mande": "^2.0.9",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
-    "vue-router": "https://pkg.pr.new/vue-router@2603",
+    "vue-router": "^5.0.0",
     "water.css": "^2.1.1"
   },
   "devDependencies": {
