--- a/playground/package.json
+++ b/playground/package.json
@@ -19,6 +19,7 @@
     "@pinia/colada-plugin-cache-persister": "workspace:^",
     "@pinia/colada-plugin-debug": "workspace:^",
     "@pinia/colada-plugin-retry": "workspace:^",
+    "@pinia/colada-plugin-mutation-metrics": "workspace:^",
     "@vueuse/core": "^14.2.0",
     "@vueuse/integrations": "^14.2.0",
     "@vueuse/router": "^14.2.0",
