--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ yarn.lock
 .pnpm-debug.log
 tsconfig.tsbuildinfo
 tsconfig.*.tsbuildinfo
-.tsc-types
+plugins/*/.tsc-types
 tsconfig.vitest-temp.json
 docs/.vitepress/cache
 vite.config.ts.timestamp-*.mjs
