--- a/plugins/debug/tsconfig.json
+++ b/plugins/debug/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../tsconfig.plugin-base.json",
+  "compilerOptions": {
+    "declarationDir": "./.tsc-types"
+  },
   "include": ["src/**/*"]
 }
